--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "^4.0.10",
     "react-navigation-stack": "^2.0.16",
-    "react-native-svg": "9.13.3"
+    "react-native-svg": "9.13.3",
+    "expo-linear-gradient": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
